[gd_scene load_steps=2 format=3 uid="uid://dh25g3jvnko17"]

[ext_resource type="Script" uid="uid://dfby8n6ayx26v" path="res://Scenes/main_menu.gd" id="1_28flt"]

[node name="MainMenu" type="CanvasLayer"]
script = ExtResource("1_28flt")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect"]
layout_mode = 0
offset_right = 1152.0
offset_bottom = 648.0

[node name="Label" type="Label" parent="ColorRect/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 55
text = "Bugz Buzzy"
horizontal_alignment = 1

[node name="LineEdit" type="LineEdit" parent="ColorRect/VBoxContainer"]
layout_mode = 2
placeholder_text = "team number"
alignment = 1

[node name="StartButton" type="Button" parent="ColorRect/VBoxContainer"]
layout_mode = 2
text = "Start"

[node name="QuitButton" type="Button" parent="ColorRect/VBoxContainer"]
layout_mode = 2
text = "Quit"

[node name="ErrorLabel" type="Label" parent="ColorRect/VBoxContainer"]
layout_mode = 2
